--- a/styles/style.css
+++ b/styles/style.css
@@ -188,9 +188,89 @@ body {
 
 @media (min-width: 768px) {
   :root {
-    --page-padding-x: 22vw;
+    --page-padding-x: 10vw;
     --page-padding-y: 2vh;
-    --header-height: 10vh;
+  }
+
+  body {
+    header {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      label {
+        display: none;
+      }
+      #hamburger {
+        display: none;
+      }
+      nav {
+        #hamburger-items {
+          display: flex;
+          gap: 1rem;
+          a {
+            color: black;
+            text-decoration: none;
+            background-color: white;
+            padding: 0.5rem 1rem 0.2rem;
+            border-radius: var(--border-radius);
+          }
+          a:hover {
+            background-color: gray;
+            color: white;
+          }
+          a:active {
+            background-color: var(--default-purple);
+            color: white;
+          }
+        }
+      }
+    }
+
+    main {
+      #landing-section {
+        padding-top: 10vh;
+        height: calc(100vh - var(--header-height));
+        animation: fadeIn 0.6s ease-out forwards;
+        #landing-pictures {
+          display: flex;
+          #portrait-placeholder {
+            width: 10rem;
+          }
+        }
+        h2 {
+          font-family: var(--font-header);
+          font-size: 8rem;
+        }
+      }
+      .card-group {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 2rem;
+      }
+    }
+    main#about { }
+    main#projects {
+      #project-showcase {
+        display: grid;
+        grid-template-columns: auto auto;
+        gap: 2rem;
+      }
+    }
+    main#contact {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+      gap: 2rem;
+    }
+  }
+}
+
+@media (min-width: 1200px) {
+  :root {
+    --page-padding-x: 15vw;
+    --page-padding-y: 2vh;
   }
 
   body {
@@ -228,10 +308,6 @@ body {
     }
 
     main {
-      padding: var(--page-padding-y) var(--page-padding-x);
-      h2, h3 {
-        font-family: var(--font-subheader);
-      }
       #landing-section {
         padding-top: 10vh;
         height: calc(100vh - var(--header-height));
@@ -254,23 +330,7 @@ body {
         gap: 2rem;
       }
     }
-    main#about {
-      display: flex;
-      flex-direction: column;
-      gap: 2rem;
-      #skills {
-        ul {
-          list-style: none;
-          column-count: 2;
-          li + li {
-            margin-top: 1rem;
-          }
-        }
-      }
-      ol {
-        list-style: none;
-      }
-    }
+    main#about { }
     main#projects {
       #project-showcase {
         display: grid;
@@ -278,42 +338,6 @@ body {
         gap: 2rem;
       }
     }
-    main#contact {
-      display: flex;
-      flex-direction: row;
-      justify-content: center;
-      align-items: center;
-      gap: 2rem;
-      form fieldset {
-        border: none;
-        div + div {
-          margin-top: 1rem;
-        }
-        input, textarea {
-          width: 100%;
-          padding: 0.3rem;
-          resize: none;
-        }
-        button {
-          margin-top: 1rem;
-          width: 100%;
-          padding: 0.6rem 0;
-          color: white;
-          background-color: black;
-          border: none;
-          border-radius: var(--border-radius);
-        }
-      }
-      #contact-info {
-        h3 {
-          display: flex;
-          align-items: center;
-          gap: 0.5rem;
-        }
-        h3 ~ h3 {
-          margin-top: 1rem;
-        }
-      }
-    }
+    main#contact { }
   }
 }
