--- a/styles/style.css
+++ b/styles/style.css
@@ -190,6 +190,7 @@ body {
     #project-showcase {
       display: flex;
       flex-direction: column;
+      align-items: center;
       gap: 2rem;
       .project-content {
         display: flex;
@@ -354,13 +355,7 @@ body {
       }
     }
     main#about { }
-    main#projects {
-      #project-showcase {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        gap: 2rem;
-      }
-    }
+    main#projects { }
     main#contact {
       display: flex;
       flex-direction: row;
@@ -388,7 +383,14 @@ body {
 
     main { }
     main#about { }
-    main#projects { }
+    main#projects {
+      #project-showcase {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 2rem;
+        justify-items: center;
+      }
+    }
     main#contact { }
   }
 }
