--- a/styles/style.css
+++ b/styles/style.css
@@ -239,7 +239,7 @@ body {
       display: flex;
       flex-direction: column;
       border: none;
-      input, textarea {
+      input, textarea, select {
         width: 100%;
         padding: 0.3rem;
         resize: none;
@@ -248,6 +248,10 @@ body {
       div {
         display: flex;
         gap: 1rem;
+        width: 100%;
+        button {
+          width: 100%;
+        }
       }
       output {
         width: 100%;
