feat: change landing page content and style

--- a/styles/style.css
+++ b/styles/style.css
@@ -161,6 +161,9 @@ body {
   }
   main#home {
     #landing-section {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
       padding-top: 5vh;
       height: 100%;
       #landing-pictures {
