--- a/styles/style.css
+++ b/styles/style.css
@@ -165,10 +165,11 @@ body {
       flex-direction: column;
       align-items: center;
       height: 100%;
-      #landing-pictures {
-        display: flex;
-        #portrait-placeholder {
-          width: 10rem;
+      picture {
+        max-width: 200px;
+        width: 100%;
+        img {
+          width: 100%;
         }
       }
       h2 {
